--- a/app/src/main/res/layout/debug_main.xml
+++ b/app/src/main/res/layout/debug_main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/logo380_90"
-    tools:context="com.debugapplication.MainActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/d3mback"
+    android:orientation="vertical">
 
+    <WebView
+        android:id="@+id/dmweb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></WebView>
 </LinearLayout>
